--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Mascon Cable Systems Webmail :: Welcome to Mascon Cable Systems Webmai"
+      content="UIA Webmail :: Welcome to UIA Webmail"
     />
     
     <!--
@@ -26,7 +26,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Mascon Cable Systems Webmail :: Welcome to Mascon Cable Systems Webmai</title>
+    <title>UIA Webmail :: Welcome to UIA Webmail</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
