--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicontwo.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/faviconthree.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Goeaston Webmail"
     />
     
     <!--
@@ -26,7 +26,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title> Login Webmail - 7.0</title>
+    <title> Login Webmail</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
