--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Webmail :: Welcome to Webmail</title>
+    <title>Planters Telephone : Cooperative - planters-net</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
